<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:id="@+id/img_1"
        android:layout_width="0dp"
        android:layout_height="@dimen/qb_px_300"
        android:layout_marginTop="@dimen/qb_px_30"
        android:layout_marginLeft="@dimen/qb_px_10"
        android:layout_marginRight="@dimen/qb_px_10"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/colorPrimaryDark"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_launcher_round"
        android:contentDescription="@string/app_name"/>

    <ImageView
        android:id="@+id/img_2"
        android:layout_width="0dp"
        android:layout_height="@dimen/qb_px_200"
        android:layout_marginTop="@dimen/qb_px_10"
        android:layout_marginLeft="@dimen/qb_px_10"
        android:layout_marginRight="@dimen/qb_px_10"
        app:layout_constraintTop_toBottomOf="@id/img_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/colorPrimaryDark"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_launcher_round"
        android:contentDescription="@string/app_name"/>

    <Button
        android:id="@+id/btn_ui_left"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/qb_px_10"
        android:layout_marginStart="@dimen/qb_px_10"
        android:layout_marginLeft="@dimen/qb_px_10"
        app:layout_constraintTop_toBottomOf="@id/img_2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btn_ui_right"
        android:text="@string/btn_ui_left"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/btn_ui_right"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/qb_px_10"
        android:layout_marginStart="@dimen/qb_px_10"
        android:layout_marginEnd="@dimen/qb_px_10"
        android:layout_marginLeft="@dimen/qb_px_10"
        android:layout_marginRight="@dimen/qb_px_10"
        app:layout_constraintTop_toBottomOf="@id/img_2"
        app:layout_constraintLeft_toRightOf="@id/btn_ui_left"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/btn_ui_right"
        tools:ignore="RtlHardcoded" />

</androidx.constraintlayout.widget.ConstraintLayout>